--- a/server/views/app.hbs
+++ b/server/views/app.hbs
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SERPSrank</title>
+    <title>Fridgewords</title>
     <link href="/css/app.css" rel="stylesheet" type="text/css">
   </head>
 
