AdWordView, AvailableWordsView, WordView

--- a/less/app.less
+++ b/less/app.less
@@ -5,3 +5,23 @@
     text-align: center;
   }
 }
+
+.game {
+  .word {
+    display: inline-block;
+    padding: 5px 15px;
+    margin: 3px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    color: #fff;
+    text-shadow: 1px 1px 1px #999;
+  }
+  .add-word {
+    .center-block;
+    width: 50%;
+  }
+  .available-words {
+    .center-block;
+    width: 70%;
+  }
+}
