--- a/templates/settings.hbs
+++ b/templates/settings.hbs
@@ -1,2 +1,3 @@
-<h2>Add new words</h2>
-<textarea/>
+<h2>Bulk add words <small>(newline separated)</small></h2>
+<textarea />
+<button type="submit" class="btn btn-default">Submit</button>
